# ssb-pypitemplate

./: CODE_OF_CONDUCT.md  README.md
.github/workflows/: constraints.txt  docs.yml  pre-commit.yml  release-drafter.yml  tests.yml
docs/: conf.py  guide.md  index.md  quickstart.md  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CONTRIBUTING.md  noxfile.py  pyproject.toml  sonar-project.properties
{{cookiecutter.project_name}}/.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/tests/: test_main.py
