[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
{% if cookiecutter.department_number is defined and cookiecutter.department_number %}
maintainers = [{ name = "__DEPARTMENT_NAME__" }]
{% endif %}
license = "{{cookiecutter.license}}"
readme = "README.md"
requires-python = ">=3.10,<4.0"
{% if cookiecutter.dependency_manager_tool == "poetry" %}
dynamic = ["classifiers"]
{% else %}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
{% if cookiecutter.license == "MIT" %}
  "License :: OSI Approved :: MIT License",
{% endif %}
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
]
{% endif %}
dependencies = [
    "click>=8.0.1",
]

[project.urls]
homepage = "https://github.com/{{cookiecutter.github_organization}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_organization}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.github_organization}}.github.io/{{cookiecutter.project_name}}"
Changelog = "https://github.com/{{cookiecutter.github_organization}}/{{cookiecutter.project_name}}/releases"

[project.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"

[dependency-groups]
lint = [
    "black[jupyter]>=25.11.0",
    "darglint>=1.8.1",
    "pre-commit>=4.4.0",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.14.5",
]
doc = [
    "furo>=2025.9.25; python_version >= '3.11'",
    "myst-parser>=4.0.1; python_version >= '3.11'",
    "sphinx>=8.2.3; python_version >= '3.11'",
    "sphinx-autobuild>=2025.8.25; python_version >= '3.11'",
    "sphinx-autodoc-typehints>=3.5.2; python_version >= '3.11'",
    "sphinx-click>=6.1.0; python_version >= '3.11'",
]
# Type hint stubs should be placed in the dev dependency group
dev = [
    {include-group = "lint"},
    {include-group = "doc"},
    "coverage[toml]>=7.11.3",
    "deptry>=0.24.0",
    "mypy>=1.18.2",
    "pygments>=2.19.0",
    "pytest>=9.0.0",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=1.3.0",
]

{% if cookiecutter.dependency_manager_tool == "poetry" %}
[tool.poetry]
classifiers = ["{{cookiecutter.development_status}}"]
requires-poetry = ">=2.0"
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') %}
packages = [{ include = "{{cookiecutter.package_name}}", from = "src" }]
{% endif %}

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
{% endif %}

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
{% if cookiecutter.code_quality_level == "High" %}
fail_under = 80
{% elif cookiecutter.code_quality_level == "Medium" %}
fail_under = 50
{% else %}
fail_under = 20
{% endif %}

[tool.deptry.per_rule_ignores]
{% if cookiecutter.dependency_manager_tool == "poetry" %}
DEP001 = ["nox", "nox_poetry"]  # packages available by default
{% else %}
DEP001 = ["nox"]  # packages available by default
{% endif %}

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
{% if cookiecutter.code_quality_level == "High" %}
select = ["ALL"]
{% elif cookiecutter.code_quality_level == "Medium" %}
select = [
    "A",    # prevent using keywords that clobber python builtins
    "ANN",  # check type annotations
    "B",    # bugbear: security warnings
    "D",    # documentation
    "E",    # pycodestyle
    "F",    # pyflakes
    "ISC",  # implicit string concatenation
    "I",    # sort imports
    "UP",   # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]
{% else %}
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
]
{% endif %}
ignore = [
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "FBT001", # Allow boolean positional arguments in a function.
    "FBT002", # Allow boolean default positional arguments in a function.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "PLR2004", # Allow to compare with unnamed numerical constants.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

{% if cookiecutter.dependency_manager_tool == "uv" and cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') %}
[tool.uv.build-backend]
module-name = "{{cookiecutter.package_name}}"

{% endif %}
[build-system]
{% if cookiecutter.dependency_manager_tool == "poetry" %}
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
{% else %}
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
{% endif %}
